# volumecontrolmcp

./: INSTALL.md  PACKAGE_SUMMARY.md  README.md  install.ps1  main.py  mcp-manifest.json  pyproject.toml  volumecontrol_client.py  volumecontrol_server.py
volumecontrolmcp/: __init__.py  server.py
